--- a/221230-UFO-Brush/index.html
+++ b/221230-UFO-Brush/index.html
@@ -10,6 +10,6 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/addons/p5.sound.js"></script>
   </head>
   <body>
-    <script type="text/javascript" src="js/221230-UFO-Brush.js"></script>
+    <script type="text/javascript" src="sketch.js"></script>
   </body>
 </html>
